Publish two drafts; add css style fix blog content sometimes doesn't stretch to full width; configure draft functionality in yml config file

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,3 +5,7 @@
 .md-typeset h2 {
     margin: 1.6em 0 1.1em;
 }
+
+.md-content--post > article {
+    flex-grow: 1;
+  }
